# CrewMind

./: .gitignore
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3bff9ba12419_add_organization_metrics.py  5d648179f8ce_add_razorpay_fields_to_subscription.py  cb93f45fb74f_add_backgroundjob_table.py  e94839836dcb_add_warroom_models.py  fdc82bd5244f_phase_8_1_core_models.py
backend/app/: main.py
backend/app/api/: agent_runs.py  agent_state.py  api_keys.py  auth.py  billing.py  chat.py  deps.py  documents.py  invitations.py  knowledge.py  me.py  members.py  memory.py  metrics.py  mfa.py  organization.py  reports.py  sessions.py  status.py  system.py  war_room.py  ws.py
backend/app/core/: audit.py  config.py  database.py  security.py
backend/app/models/: __init__.py  agent_message.py  agent_run.py  agent_state.py  agent_task.py  conversation.py  document.py  job.py  memory.py  metric.py  mixins.py  observability.py  organization.py  rbac.py  report.py  security.py  tenant.py  topic.py  user.py  war_room.py
backend/app/schemas/: agent.py  auth.py  chat.py  document.py  metric.py  reasoning.py  report.py  war_room.py
backend/app/scripts/: seed.py
backend/app/services/agents/: __init__.py  base.py  comms.py  loop.py  (+10 more)
backend/docs/: audit-system.md  future-scaling.md  multi-tenancy.md  rbac.md  request-context.md  startup.md  workspace-isolation.md
backend/tests/: conftest.py  test_agents.py  test_auth_advanced.py  test_crew_chat.py  test_orchestrator.py  test_parsers.py  test_rbac.py  test_workspace_isolation.py
(+138 files in other folders)
