[project]
name = "crewmind-backend"
version = "0.1.0"
description = "CrewMind — AI Executive Operating System backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "greenlet>=3.1.1",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "google-genai>=1.2.0",
    "chromadb>=0.5.15",
    "pypdf>=5.0.1",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "websockets>=13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
